syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "/.;proto";

service User {
  // 用户列表
  rpc GetUserList(PageInfo) returns(UserListResponse);
  // 手机号查询用户信息
  rpc GetUserByMobile(MobileRequest) returns (UserInfoResponse);
  // Id查询用户
  rpc GetUserById(IdRequest) returns (UserInfoResponse);
  // 添加用户
  rpc CreateUser(CreateUserInfo) returns (UserInfoResponse);
  // 更新用户
  rpc UpdateUser(UpdateUserInfo) returns (google.protobuf.Empty);
  // 检查用户密码
  rpc CheckPassWord(PassWordCheckInfo) returns (CheckResponse);
}

message PageInfo {
  uint32 pn = 1;
  uint32 pSize = 2;
}

message CheckResponse {
  bool success = 1;
}

message PassWordCheckInfo {
  string password = 1;
  string encryptedPassword = 2;
}

message UpdateUserInfo {
  int32 id = 1;
  string nickName = 2;
  string gender = 3;
  uint64 birthday = 4;
}

message CreateUserInfo {
  string nickName = 1;
  string passWord = 2;
  string mobile = 3;
}

message IdRequest {
  int32 id = 1;
}

message MobileRequest {
  string mobile = 1;
}

message UserInfoResponse {
  int32 id = 1;
  string passWord = 2;
  string mobile = 3;
  string nickName = 4;
  uint64 birthday = 5;
  string gender = 6;
  int32 role = 7;
}

message UserListResponse {
  int32 total = 1;
  repeated UserInfoResponse data = 2;
}